image slideshow, polygons and s3 upload

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
+:root {
+  /* Colours */
+  --main-primary-dark: rgba(46, 196, 182, 1);
+  --main-primary-light: rgba(203, 243, 240, 1);
+  --main-accent-dark: rgba(255, 159, 28, 1);
+  --main-accent-light: rgba(255, 191, 105, 1);
+  --main-background: rgba(255, 255, 255, 1);
+
+  /* Radius */
+  --big-radius: 25px;
+  --small-radius: 10px;
+
+  /* Shadow */
+  --big-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,17 +22,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--main-background);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-:root {
-  --main-primary-dark: rgba(46, 196, 182, 1);
-  --main-primary-light: rgba(203, 243, 240, 1);
-  --main-accent-dark: rgba(255, 159, 28, 1);
-  --main-accent-light: rgba(255, 191, 105, 1);
-  --main-background: rgba(255, 255, 255, 1);
 }
