--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -135,14 +135,20 @@
   text-shadow: 2px 2px 1px #444444;
   font-weight: 700;
   margin-left: 1rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   margin-bottom: 0;
 }
 
 .title-text {
-  font-size: 4rem;
+  font-size: 3.5rem;
 }
 
 .title-sub-text {
   font-size: 1.6rem;
+}
+
+.login-item {
+  width: 100%;
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
 }
